--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@ td.time {
 }
 
 td.workout-name {
-    font-family: "Impact", cursive, sans-serif;
+    font-family: "Impact", sans-serif;
     color: #ff0000;
     font-size: 20px;
 }
