--- a/styles.css
+++ b/styles.css
@@ -152,7 +152,7 @@ td.workout-name {
 
 .image-container {
   background-image: url('IMG-0346.PNG');
-  width: 100%;
+  width: auto;
   height: 300px;
   background-size: cover;
 }
