--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ td.workout-name {
 .image-container {
   background-image: url('IMG-0346.PNG');
   width: auto;
-  height: 300px;
+  height: auto;
   background-size: cover;
 }
 
