--- a/styles.css
+++ b/styles.css
@@ -152,8 +152,8 @@ td.workout-name {
 
 .image-container {
   background-image: url('IMG-0346.PNG');
-  width: auto;
-  height: auto;
+  width: 100%;
+  height: 100%;
   background-size: cover;
 }
 
