--- a/styles.css
+++ b/styles.css
@@ -152,9 +152,14 @@ td.workout-name {
 
 .image-container {
   background-image: url('IMG-0346.PNG');
-  width: 100%;
-  height: auto;
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 250px; /* adjust to desired height */
+  background-color: #006699;
+  color: white;
+  text-align: center;
+  padding: 30px
 }
 
 .image-container2 {
