--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ footer {
 }
 
 table {
-  width: 55%;
+  width: 40%; 
   margin: 0 auto;
   border-collapse: collapse;
   font-family: Arial, sans-serif;
@@ -151,6 +151,7 @@ td.workout-name {
 }
 
 .image-container {
+  
   background-image: url('IMG-0346.PNG');
   background-size: cover;
   background-repeat: no-repeat;
@@ -168,6 +169,7 @@ td.workout-name {
   height: 300px;
   background-size: cover;
 }
+
 
 .row-video {
   width: 100%;
@@ -230,6 +232,10 @@ text-align: center;
   padding: 20px;
   background-color: #fff;
   box-shadow: 0px 0px 10px #ccc;
+  background-size: cover;
+
+
+
 }
 
 .header {
