--- a/styles.css
+++ b/styles.css
@@ -72,8 +72,8 @@ footer {
 
 /* Default table styling */
 table {
-  width: 40%; 
-  margin: 0 auto;
+  width: 100%; 
+  margin: 0;
   border-collapse: collapse;
   font-family: Arial, sans-serif;
   text-align: center;
@@ -81,6 +81,7 @@ table {
   border-radius: 10px;
   box-shadow: 0px 0px 10px #ccc;
 }
+
 
 
 
@@ -245,6 +246,7 @@ text-align: center;
     width: 100%;
     margin: 0; /* remove the center alignment */
   }}
+
 
 .header {
   background-color: #333;
